@@ -1,3 +1,18 @@
+/*******************************************************************************
+ * Copyright (c) 2020 DisCo Group - Universidad de Zaragoza.
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 1.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-1.0/
+ *
+ * SPDX-License-Identifier: EPL-1.0
+ *
+ * Contributors:
+ *     Abel Gómez
+ *     Ignacio Requeno
+ *     Diego Pérez
+ *******************************************************************************/
 package es.unizar.disco.simulation.local.calculators;
 
 import java.math.BigDecimal;
@@ -43,7 +58,7 @@ public class ReliabilityCalculatorSpark implements MeasureCalculator {
 				
 				//Look for SparkNode element. Look its info in DaComponent. Get the MTTF and MTTR. Calculate availability from them
 				
-				Float rateFail = new Float(1);
+				Float rateFail = Float.valueOf(1);
 				double missionTime= 0.0;
 				int numServers = 1;
 				PnmlToolInfoUtils pnmlutils = new PnmlToolInfoUtils();
